update_surefire